feat: multiple module improvements
